--- a/src/RestClient/RestClient.csproj
+++ b/src/RestClient/RestClient.csproj
@@ -14,4 +14,8 @@
     <Compile Remove="Parser\Url.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.14.1" />
+  </ItemGroup>
+
 </Project>
